[package]

name = "glimmerkit-build"
version = "1.0.0"
edition = "2018"

[dependencies]
swc_ecma_transforms = "0.30.4"
swc_ecma_codegen = "0.41.3"
swc_common = "0.10.6"
swc_ecmascript = "0.15.0"
swc_ecma_parser = "0.43.1"
swc_ecma_ast = "0.35.0"
swc_ecma_visit = "0.21.0"
glob = "0.3.0"
relative-path = "1.3.2"
globwalk = "0.8.0"
pathdiff = "0.2.0"
dashmap = "3.11.10"
string_cache = "0.8.1"
regex = "1.4.2"
yaml-rust = "0.4.4"
derive-new = "0.5.8"
gitignore = "1.0.7"
chrono = "0.4.19"
